--- a/Esami/Esame_2021_06_25/Esercizio2.html
+++ b/Esami/Esame_2021_06_25/Esercizio2.html
@@ -1,29 +1,54 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head></head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="Esercizio2.css">
     </head>
     <body>
-        <div class="container">
-            <div id="div-menu">
-                <h3>Argomenti</h3>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
+        <div>
+            <div>
+                <p>Argomenti</p>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
             </div>
-            <a id="div-article-1" href="fakepage.html"><div><p><span id="span-article-1">Coltivare cetrioli: come,<br> quando e dove coltivarli</span></p></div></a>
-            <a id="div-article-2" href="fakepage.html"><div><p><span id="span-article-2">Coltivare cetrioli: come,<br> quando e dove coltivarli</span></p></div></a>
-            <a id="div-article-3" href="fakepage.html"><div><p><span id="span-article-3">Coltivare cetrioli: come,<br> quando e dove coltivarli</span></p></div></a>
-            <a id="div-article-4" href="fakepage.html"><div><p><span id="span-article-4">Coltivare cetrioli: come,<br> quando e dove coltivarli</span></p></div></a>
-            <a id="div-article-5" href="fakepage.html"><div><p><span id="span-article-5">Coltivare cetrioli: come,<br> quando e dove coltivarli</span></p></div></a>
+            <div>
+                <div style="background-image: url(http://diiorio.nws.cs.unibo.it/twe/resources/2406b/immagini/cetrioli.jpg)">
+                    <p>
+                        <a href="/id">Coltivare cetrioli: come, quando e dove piantarli</a>
+                    </p>
+                </div>
+                <div style="background-image: url(http://diiorio.nws.cs.unibo.it/twe/resources/2406b/immagini/rasaerba.jpg)">
+                    <p>
+                        <a href="/id">Coltivare cetrioli: come, quando e dove piantarli</a>
+                    </p>
+                </div>
+                <div style="background-image: url(http://diiorio.nws.cs.unibo.it/twe/resources/2406b/immagini/decespugliatore.jpg)">
+                    <p>
+                        <a href="/id">Coltivare cetrioli: come, quando e dove piantarli</a>
+                    </p>
+                </div>
+                <div style="background-image: url(http://diiorio.nws.cs.unibo.it/twe/resources/2406b/immagini/casetta.jpg)">
+                    <p>
+                        <a href="/id">Coltivare cetrioli: come, quando e dove piantarli</a>
+                    </p>
+                </div>
+                <div style="background-image: url(http://diiorio.nws.cs.unibo.it/twe/resources/2406b/immagini/asparagi.jpg)">
+                    <p>
+                        <a href="/id">Coltivare cetrioli: come, quando e dove piantarli</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
