--- a/Esami/Esame_2021_06_25/Esercizio3.html
+++ b/Esami/Esame_2021_06_25/Esercizio3.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head></head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="Esercizio2.css">
         <script src="Esercizio3.js"></script>
     </head>
     <body>
-        <div class="container">
-            <div id="div-menu">
-                <h3>Argomenti</h3>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
-                <div><span>Come curare le piante (40)</span></div>
+        <div>
+            <div>
+                <p>Argomenti</p>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
+                <span>Come curare le piante (44)</span>
             </div>
-          
+            <div id="div-grid">
+                
+            </div>
         </div>
     </body>
 </html>
