completati rispettivamente esercizi html e css

--- a/Esami/Esame_2023_09_07/Esercizio2.html
+++ b/Esami/Esame_2023_09_07/Esercizio2.html
@@ -1,52 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="Esercizio2.css">
-    </head>
-    <body>
-        <div>
-            <div class="sidebar">
-                <p>
-                    <span>+ New Chat</span>
-                    <span>+</span>
-                </p>
-                <span>June</span>
-                <p>
-                    <span><img src="img/foto1.png">DBpedia SPARQL</span>
-                    <span><img src="img/foto1.png">DBpedia SPARQL</span>
-                    <span><img src="img/foto1.png">DBpedia SPARQL</span>
-                    <span><img src="img/foto1.png">DBpedia SPARQL</span>
-                    <span><img src="img/foto1.png">DBpedia SPARQL</span>
-                    <span><img src="img/foto1.png">DBpedia SPARQL</span>
-                    <span><img src="img/foto1.png">DBpedia SPARQL</span>
-                </p>
-                <p>
-                    <span>Renew Plus</span>
-                    <span>Matteo Canghiari</span>
-                </p>
-            </div>
-            <div>
-                <p>
-                    <span>Default (ChatGPT 3.5)</span>
-                </p>
-                <p>
-                    <img src="img/foto1.png">Ciao!
-                </p>
-                <p>
-                    <img src="img/foto2.png">Ciao! Come posso aiutarti oggi?
-                </p>
-                <p>
-                    <img src="img/foto1.png">Mi serve aiuto con il mio esame di informatica!. Se mi beccano però mi bocciano.
-                </p>
-                <p>
-                    <img src="img/foto2.png">Capisco che hai bisogno di aiuto...
-                </p>
-                <div>
-                    <span><img src="img/foto2.png">Regenerate</span>
-                    <input placeholder="Send a message">
-                    <footer>Free Research Preview. ChatGPT may produce inaccurate information about people, or facts.</footer>
-                </div>
-            </div>
-        </div>
-    </body>
+	<head>	
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="Esercizio2.css">
+	</head>
+	<body>
+		<div>
+			<div>
+				<div>
+					<span>+ New chat</span>
+					<span><img src="img/message.png"></span>
+				</div>
+				<div>
+					<span>June</span>
+					<span><img src="img/message.png">Lorem ipsum</span>
+					<span><img src="img/message.png">Lorem ipsum</span>
+					<span><img src="img/message.png">Lorem ipsum</span>
+					<span><img src="img/message.png">Lorem ipsum</span>
+					<span><img src="img/message.png">Lorem ipsum</span>
+					<span><img src="img/message.png">Lorem ipsum</span>
+					<span><img src="img/message.png">Lorem ipsum</span>
+					<span><img src="img/message.png">Lorem ipsum</span>				
+				</div>
+				<div>
+					<span><img src="ai_profile_picture.png">Lorem ipsum</span>
+					<span><img src="ai_profile_picture.png">Davide San Rossi</span>		
+				</div>
+			</div>
+			<div>
+				<div>
+					<span>Default (GPT-3.5) <img src="img/share.png"></span>
+				</div>
+				<div>
+					<span><img src="img/message.png">Ciao</span>
+				</div>
+				<div>
+					<span><img src="img/share.png">Ciao! Come posso aiutarti oggi?</span>
+				</div>
+				<div>
+					<div>
+						<span><img src="img/reload.png">Regenerate</span>
+						<span>Send a message<img src="img/send.png"></span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
