--- a/Esami/Esame_2023_09_07/Esercizio2.html
+++ b/Esami/Esame_2023_09_07/Esercizio2.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head>	
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<meta charset="UTF-8" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="Esercizio2.css">
 	</head>
 	<body>
 		<div>
-			<div>
+			<div>	
 				<div>
 					<span>+ New chat</span>
 					<span><img src="img/message.png"></span>
@@ -21,29 +20,23 @@
 					<span><img src="img/message.png">Lorem ipsum</span>
 					<span><img src="img/message.png">Lorem ipsum</span>
 					<span><img src="img/message.png">Lorem ipsum</span>
-					<span><img src="img/message.png">Lorem ipsum</span>				
 				</div>
 				<div>
-					<span><img src="ai_profile_picture.png">Lorem ipsum</span>
-					<span><img src="ai_profile_picture.png">Davide San Rossi</span>		
+					<span><img src="img/ai_profile_picture.png">Lorem ipsum</span>
+					<span><img src="img/ai_profile_picture.png">Lorem ipsum</span>
 				</div>
 			</div>
 			<div>
-				<div>
-					<span>Default (GPT-3.5) <img src="img/share.png"></span>
-				</div>
-				<div>
-					<span><img src="img/message.png">Ciao</span>
-				</div>
-				<div>
-					<span><img src="img/share.png">Ciao! Come posso aiutarti oggi?</span>
-				</div>
+				<p><span>Default GPT</span><img src="img/share.png"></p>
+				<p><img src="img/message.png"><span>Ciao!</span></p>
+				<p><img src="img/message.png"><span>Ciao, come posso aiutarti oggi?</span></p>		
 				<div>
 					<div>
 						<span><img src="img/reload.png">Regenerate</span>
-						<span>Send a message<img src="img/send.png"></span>
 					</div>
-				</div>
+					<input placeholder="Send a message">
+					<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+				</div>			
 			</div>
 		</div>
 	</body>
