--- a/Esami/Esame_2023_09_07/Esercizio2.html
+++ b/Esami/Esame_2023_09_07/Esercizio2.html
@@ -22,17 +22,17 @@
 					<span><img src="img/message.png">Lorem ipsum</span>
 				</div>
 				<div>
-					<span><img src="img/ai_profile_picture.png">Lorem ipsum</span>
-					<span><img src="img/ai_profile_picture.png">Lorem ipsum</span>
+					<span><img src="img/message.png">Lorem ipsum</span>
+					<span><img src="img/message.png">Lorem ipsum</span>
 				</div>
 			</div>
 			<div>
-				<p><span>Default GPT</span><img src="img/share.png"></p>
+				<p><span>Default GPT</span><img src="img/message.png"></p>
 				<p><img src="img/message.png"><span>Ciao!</span></p>
 				<p><img src="img/message.png"><span>Ciao, come posso aiutarti oggi?</span></p>		
 				<div>
 					<div>
-						<span><img src="img/reload.png">Regenerate</span>
+						<span><img src="img/message.png">Regenerate</span>
 					</div>
 					<input placeholder="Send a message">
 					<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
