--- a/Esami/Esame_2024_05_28/turno_1/Esercizio1.html
+++ b/Esami/Esame_2024_05_28/turno_1/Esercizio1.html
@@ -1,36 +1,93 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="Esercizio1.css">
-    </head>
-    <body>
-        <nav>
-            <span><img src="img/logo.png"></span>
-            <div>
-                <span>MOVIES</span>
-                <span>TV SHOWS</span>
-                <span>SHOP</span>
-                <span>NEWS</span>
-                <span>SHOWTIMES</span>
-            </div>
-        </nav>
-        <div>
-            <span style="background-image: url(img/1.png);"><p><span>PIXAR VERSUS WARNER BROS</span></p></span>
-            <span style="background-image: url(img/2.png);"><p><span>PIXAR VERSUS WARNER BROS</span></p></span>
-            <span style="background-image: url(img/3.png);"><p><span>PIXAR VERSUS WARNER BROS</span></p></span>
-        </div>
-        <p>
-            <span>NEW & UPCOMING MOVIES IN THEATERS</span>
-            <span>VIEW ALL</span>
-        </p>
-        <div>
-            <img src="img/3.png">
-            <img src="img/3.png">
-            <img src="img/3.png">
-            <img src="img/3.png">
-            <img src="img/3.png">
-            <img src="img/3.png">
-            <img src="img/3.png">
-        </div>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="Esercizio1.css"> 
+	</head>
+	<body>
+		<div>
+			<nav>	
+				<img src="img/logo.png" alt="Logo della pagina">
+				<div>
+					<span>Movies</span>
+					<span>Movies</span>
+					<span>Movies</span>
+					<span>Movies</span>
+					<span>Movies</span>
+				</div>
+			</nav>
+			<div>
+				<span>
+					<span><i>MAD MAX</i> MOVIES IN ORDER</span>
+					<img src="img/1.png">
+				</span>
+				<span>
+					<span><i>MAD MAX</i> MOVIES IN ORDER</span>
+					<img src="img/2.png">
+				</span>
+				<span>
+					<span><i>MAD MAX</i> MOVIES IN ORDER</span>
+					<img src="img/2.png">
+				</span>
+			</div>
+			<div>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+				<span>
+					<img src="img/2.png">
+					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+				</span>
+			</div>
+		</div>
+	</body>
 </html>
