--- a/Esami/Esame_2022_02_10/Esercizio2.html
+++ b/Esami/Esame_2022_02_10/Esercizio2.html
@@ -1,60 +1,43 @@
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Esercizio 2 Esame 10/02/2022</title>
-        <meta charset="UTF-8">
-        <link type="text/css" rel="stylesheet" href="Esercizio2.css">
-    </head>
-    <body>
-        <nav>
-            <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1002/euflag.png" alt="logoEU.png">
-            <p>Un sito ufficiale dell'Unione Europea</p>
-        </nav>
-        <div>
-            <h1>Notizie, eventi e pubblicazioni</h1>
-        </div>
-        <div>
-            <div>
-                <div>
-                    <span>COMUNICATO STAMPA | 8 Febbraio 2020</span>
-                    <a href="fakePage.html">
-                        <p>
-                            Sovranità digitale: la Commissione propone una legge per far fronte alle carenze dei semiconduttori e rafforzare la leadership tecnologica in Europa
-                        </p>
-                    </a>
-                </div>
-                <div>
-                    <span>COMUNICATO STAMPA | 8 Febbraio 2020</span>
-                    <a href="fakePage.html">
-                        <p>
-                            Sovranità digitale: la Commissione propone una legge per far fronte alle carenze dei semiconduttori e rafforzare la leadership tecnologica in Europa
-                        </p>
-                    </a>
-                </div>
-                <div>
-                    <span>COMUNICATO STAMPA | 8 Febbraio 2020</span>
-                    <a href="fakePage.html">
-                        <p>
-                            Sovranità digitale: la Commissione propone una legge per far fronte alle carenze dei semiconduttori e rafforzare la leadership tecnologica in Europa
-                        </p>
-                    </a>
-                </div>
-            </div>
-            <div>
-                <a href="fakePage.html">
-                    <div>
-                        <h2>Eventi</h2>
-                        <p>Prossimi eventi organizzati dalla Commissione europea.</p>
-                    </div>
-                </a>
-                <a href="fakePage.html">
-                    <div>
-                        <h2>Pubblicazioni</h2>
-                        <p>Pubblicazione dell'EU accessibili da EU bookshop e da altre fonti.</p>
-                    </div>
-                </a>
-            </div>
-            <p>Tutte le notizie</p>
-        </div>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="Esercizio2.css">
+	</head>
+	<body>
+		<div>
+			<nav>
+				<img src="http://diiorio.nws.cs.unibo.it/twe/resources/1002/euflag.png" alt="Bandiera EU">
+				<span>Un sito ufficiale dell'Unione Europea</span>
+			</nav>
+			<h2>Notizie, eventi e pubblicazioni</h2>
+		</div>
+		<div>
+			<div>
+				<p>
+					<span>COMUNICATO STAMPA | 8 Febbraio 2020</span>
+					<span>Sovranità digitale: la commisione propone una legge per far fronte alla carenza dei semiconduttori e rafforzare la leadership tecnologica dell'Europa</span>
+				</p>
+				<p>
+					<span>COMUNICATO STAMPA | 8 Febbraio 2020</span>
+					<span>Sovranità digitale: la commisione propone una legge per far fronte alla carenza dei semiconduttori e rafforzare la leadership tecnologica dell'Europa</span>
+				</p>
+				<p>
+					<span>COMUNICATO STAMPA | 8 Febbraio 2020</span>
+					<span>Sovranità digitale: la commisione propone una legge per far fronte alla carenza dei semiconduttori e rafforzare la leadership tecnologica dell'Europa</span>
+				</p>
+			</div>
+			<div>
+				<p>
+					<span>Eventi</span>
+					<span>Prossimi eventi organizzati dall'Unione Europea.</span>	
+				</p>
+				<p>
+					<span>Eventi</span>
+					<span>Prossimi eventi organizzati dall'Unione Europea.</span>	
+				</p>
+			</div>
+		</div>
+		<a href="">Tutti le notizie ></a>2
+	</body>
 </html>
