completati rispettivamente esericizi html e css

--- a/Esami/Esame_2023_09_07/Esercizio2.html
+++ b/Esami/Esame_2023_09_07/Esercizio2.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8" content="width=device-width, initial-scale=1.0">
+		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="Esercizio2.css">
 	</head>
 	<body>
 		<div>
-			<div>	
+			<div>
 				<div>
-					<span>+ New chat</span>
+					<span>+ New Chat</span>			
 					<span><img src="img/message.png"></span>
 				</div>
+				<span>June</span>
+				<span><img src="img/message.png">Lorem ipsum</span>
+				<span><img src="img/message.png">Lorem ipsum</span>
+				<span><img src="img/message.png">Lorem ipsum</span>
+				<span><img src="img/message.png">Lorem ipsum</span>
+				<span><img src="img/message.png">Lorem ipsum</span>
+				<span><img src="img/message.png">Lorem ipsum</span>
+				<span><img src="img/message.png">Lorem ipsum</span>
 				<div>
-					<span>June</span>
-					<span><img src="img/message.png">Lorem ipsum</span>
-					<span><img src="img/message.png">Lorem ipsum</span>
-					<span><img src="img/message.png">Lorem ipsum</span>
-					<span><img src="img/message.png">Lorem ipsum</span>
-					<span><img src="img/message.png">Lorem ipsum</span>
-					<span><img src="img/message.png">Lorem ipsum</span>
-					<span><img src="img/message.png">Lorem ipsum</span>
-				</div>
-				<div>
-					<span><img src="img/message.png">Lorem ipsum</span>
-					<span><img src="img/message.png">Lorem ipsum</span>
+					<span><img src="img/message.png">Renew plus</span>
+					<span><img src="img/message.png">Matteo Rossi</span>
 				</div>
 			</div>
 			<div>
-				<p><span>Default GPT</span><img src="img/message.png"></p>
-				<p><img src="img/message.png"><span>Ciao!</span></p>
-				<p><img src="img/message.png"><span>Ciao, come posso aiutarti oggi?</span></p>		
+				<span>Lorem ipsum (3.5-turbo)<img src="img/message.png"></span>
+				<span><img src="img/message.png">Lorem ipsum</span>
+				<span><img src="img/message.png">Lorem ipsum</span>
 				<div>
 					<div>
-						<span><img src="img/message.png">Regenerate</span>
+						<span><span>Reload</span><img src="img/message.png"></span>
+						<span><span>Send a message</span><img src="img/message.png"></span>
+						<p>Lorem ipsum</p>
 					</div>
-					<input placeholder="Send a message">
-					<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
-				</div>			
+				</div>
 			</div>
 		</div>
 	</body>
