completati rispettivamente esericizi html e css

--- a/Esami/Esame_2023_09_07/Esercizio2.html
+++ b/Esami/Esame_2023_09_07/Esercizio2.html
@@ -21,17 +21,17 @@
 				<span><img src="img/message.png">Lorem ipsum</span>
 				<div>
 					<span><img src="img/message.png">Renew plus</span>
-					<span><img src="img/message.png">Matteo Rossi</span>
+					<span><img src="img/ai_profile_picture.png">Matteo Rossi</span>
 				</div>
 			</div>
 			<div>
-				<span>Lorem ipsum (3.5-turbo)<img src="img/message.png"></span>
+				<span>Lorem ipsum (3.5-turbo)<img src="img/share.png"></span>
 				<span><img src="img/message.png">Lorem ipsum</span>
 				<span><img src="img/message.png">Lorem ipsum</span>
 				<div>
 					<div>
-						<span><span>Reload</span><img src="img/message.png"></span>
-						<span><span>Send a message</span><img src="img/message.png"></span>
+						<span><span>Reload</span><img src="img/reload.png"></span>
+						<span><span>Send a message</span><img src="img/send.png"></span>
 						<p>Lorem ipsum</p>
 					</div>
 				</div>
