--- a/Esami/Esame_2021_07_05/Esercizio2.html
+++ b/Esami/Esame_2021_07_05/Esercizio2.html
@@ -2,71 +2,73 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="Esercizio2.css">
 	</head>
 	<body>
-		<div>
-			<nav>
-				<img src="img/logo.png">
-				<div>
-					<span>Home</span>
-					<span>Home</span>
-					<span>Home</span>
-					<span>Home</span>
-					<span>Home</span>
-					<span>Home</span>
-					<span>Home</span>
-					<span>Home</span>
-					<span>Home</span>
-					<span>Home</span>
-				</div>
-				<div>
-					<span>Subscribe</span>
-					<span>Sign In</span>
-				</div>
-			</nav>
+		<nav>
+			<img src="img/logo.png">
 			<div>
-				<div>
-					<div style="background-image: url(img/2.png);"><p><--></p></div>
-					<p>
-						<span>Lorem ipsum lorem ipsum lorem ipsum</span>
-						<span>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
-					</p>
-				</div>
-				<div>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+			</div>
+			<div>
+				<span>Subscribe</span>
+				<span>Sign in</span>
+			</div>
+		</nav>
+		<div>
+			<div>
+				<span>
+					<img src="img/2.png">
 					<div>
-						<div style="background-image: url(img/2.png);"><p><--></p></div>
-						<p>
-							<span>Lorem ipsum lorem ipsum lorem ipsum</span>
-							<span>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
-						</p>
+						<span>Lorem ipsum lorem ipsum</span>
+						<span>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
 					</div>
+				</span>
+			</div>
+			<div>
+				<span>
+					<img src="img/2.png">
 					<div>
-						<div style="background-image: url(img/3.png);"><p><--></p></div>
-						<p>
-							<span>Lorem ipsum lorem ipsum lorem ipsum</span>
-							<span>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
-						</p>
+						<span>Lorem ipsum lorem ipsum</span>
+						<span>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
 					</div>
-				</div>
+				</span>
+				<span>
+					<img src="img/3.png">
+					<div>
+						<span>Lorem ipsum lorem ipsum</span>
+						<span>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+					</div>
+					<span>View Gallery</span>
+				</span>
+			</div>
+			<div>
 				<p>
-					<span>Lorem ipsum</span>
+					<span>+ FOR SUBSCRIBERS</span>
 					<span>
-						<span>Lorem ipsum</span>
-						<span><span>Lorem ipsum</span> | 6 minutes ago</span>
+						<span>Lorem ipsum lorem ipsum</span>
+						<label>Lorem ipsum</span>
 					</span>
 					<span>
-						<span>Lorem ipsum</span>
-						<span><span>Lorem ipsum</span> | 6 minutes ago</span>
+						<span>Lorem ipsum lorem ipsum</span>
+						<label>Lorem ipsum</span>
 					</span>
 					<span>
-						<span>Lorem ipsum</span>
-						<span><span>Lorem ipsum</span> | 6 minutes ago</span>
+						<span>Lorem ipsum lorem ipsum</span>
+						<label>Lorem ipsum</span>
 					</span>
 					<span>
-						<span>Lorem ipsum</span>
-						<span><span>Lorem ipsum</span> | 6 minutes ago</span>
+						<span>Lorem ipsum lorem ipsum</span>
+						<label>Lorem ipsum</span>
 					</span>
 				</p>
 			</div>
