completati rispettivamente esercizi api, html e css

--- a/Esami/Esame_2021_06_03/Esercizio2.html
+++ b/Esami/Esame_2021_06_03/Esercizio2.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="Esercizio2.css">
-    </head>
-    <body>
-        <div>
-            <div>
-                <div>
-                    <img src="http://diiorio.nws.cs.unibo.it/twe/api/resort/images/delfino.png" alt="logo.png">
-                    <p><span>Nome:</span> Resort Delfino</p>
-                    <p><span>Indirizzo:</span> Lungomare Sud - Rimini</p>
-                    <input type="radio">
-                </div>
-                <div>
-                    <img src="http://diiorio.nws.cs.unibo.it/twe/api/resort/images/dune.png" alt="logo.png">
-                    <p><span>Nome:</span> Resort Dune</p>
-                    <p><span>Indirizzo:</span> Lungomare Nord - Rimini</p>
-                    <input type="radio">
-                </div>
-            </div>
-            <div>
-                <h2>Aggiorna descrizione:</h2>
-                <textarea>Un resolt meraviglioso con vista delfinario...</textarea>
-                <div>
-                    <button type="submit">Invia</button>
-                    <button type="submit">Annulla</button>
-                </div>
-            </div>
-        </div>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="Esercizio2.css">
+	</head>
+	<body>
+		<div>
+			<div>
+				<div>
+					<img src="img/1.png">
+					<p><b>Nome:</b> Resort Delfino</p>
+					<p><b>Indirizzo:</b> Lungomare Sud-Rimini</p>
+					<input type="radio">
+				</div>
+				<div>
+					<img src="img/1.png">
+					<p><b>Nome:</b> Resort Delfino</p>
+					<p><b>Indirizzo:</b> Lungomare Sud-Rimini</p>
+					<input type="radio">
+				</div>
+			</div>
+			<div>
+				<h2>Aggiorna la descrizione:</h2>
+				<div>
+					<textarea>Un fantastico resort con vista delfinario...</textarea>
+				</div>
+				<div>
+					<button>Invia</button>
+					<button>Annulla</button>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
