--- a/Esami/Esame_2021_06_03/Esercizio4.html
+++ b/Esami/Esame_2021_06_03/Esercizio4.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <style>
-            body, html {
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                max-width: 100vw;
-                max-height: 100vh;
-                padding: 0;
-                margin: 0;
-            }
-
-            #main {
-                display: flex;
-                flex-direction: row;
-                width: 50%;
-                padding: 1rem
-            }
-
-            #main-content {
-                font-size: 16pt;
-                font-weight: bold;
-                color: white;
-                background-color: blue;
-            }
-
-            nav {
-                display: flex;
-                flex-direction: row;
-                padding: 1rem;
-                gap: 1rem;
-            }
-
-            nav>div {
-                padding: 1rem 0.5rem 1rem 0.5rem;
-                font-size: 14pt;
-                color: blue;
-                border: 2px dashed blue;
-            }
-        </style>
-    </head>
-    <body>
-        <section id="main">
-            <section id="main-content">
-                A month is a unit of time, used with calendars, that is approximately as
-                long as a natural orbital period of the Moon; the words month and Moon are
-                cognates.
-            </section>
-            <nav>
-                <div id="jan" class="nav-item">Jan</div>
-                <div id="feb" class="nav-item">Feb</div>
-                <div id="mar" class="nav-item">Mar</div>
-            </nav>
-        </section>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<style>
+			body {
+				width: 100vw;
+				padding: 0;
+				margin: 0;
+				font-family: sans-serif
+			}
+			
+			#main {
+				display: flex;
+				align-items: center;
+				width: 45%;
+				margin: auto;
+				margin-top: 1rem;
+			}
+			
+			#main-content {
+				font-weight: bold;
+				color: white;
+				background-color: blue;
+			}
+			
+			body>section>nav {
+				display: flex;
+				gap: 1rem;
+			}
+			
+			body>section>nav {
+				margin-left: 1rem;
+			}
+			
+			.nav-item {
+				padding: 1rem;
+				color: blue;
+				border: 2px dashed blue;
+			}
+		</style>
+	</head>
+	<body>
+		<section id="main">
+			<section id="main-content">
+				A month is a unit of time, used with calendars, that is approximately as
+				long as a natural orbital period of the Moon; the words month and Moon are
+				cognates.
+			</section>
+			<nav>
+				<div id="jan" class="nav-item">Jan</div>
+				<div id="feb" class="nav-item">Feb</div>
+				<div id="mar" class="nav-item">Mar</div>
+			</nav>
+		</section>
+	</body>
 </html>
