completati rispettivamente esercizi html e css

--- a/Esami/Esame_2021_06_23/Esercizio2.html
+++ b/Esami/Esame_2021_06_23/Esercizio2.html
@@ -1,60 +1,68 @@
 <!DOCTYPE html>
 <html>
-	<head>	
+	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" type="text/css" href="Esercizio2.css">
 	</head>
 	<body>
-		<div>
+		<nav>	
 			<div>
-				<span>info@centroverderovigo.com</span>
-				<span>+39 0541 632673</span>
+				<span>+39 0425 47853</span>
+				<span>info@centrorovigo.com</span>
 			</div>
-			<nav>
+			<div>
 				<img src="img/logo.png">
-				<div>				
-					<input type="text" placeholder="Cosa stai cercando?">
-					<span>+</span>
-				</div>
+				<span>Cosa stai cercando?</span>
 				<span>Accedi o Registrati</span>
 				<span>Carrello</span>
 				<span>Lista dei desideri</span>
-			</nav>
-			<div>
-				<span>ORTO E GIARDINO</span>
-				<span>ORTO E GIARDINO</span>
-				<span>ORTO E GIARDINO</span>
-				<span>ORTO E GIARDINO</span>
-				<span>ORTO E GIARDINO</span>
-				<span>ORTO E GIARDINO</span>
-				<span>ORTO E GIARDINO</span>
-				<span>ORTO E GIARDINO</span>
-				<span>ORTO E GIARDINO</span>
 			</div>
 			<div>
-				<div>
-					<p>Argomenti</p>
-					<span>Come curare le piante (44)</span>
-					<span>Come curare le piante (44)</span>
-					<span>Come curare le piante (44)</span>
-					<span>Come curare le piante (44)</span>
-					<span>Come curare le piante (44)</span>
-					<span>Come curare le piante (44)</span>
-					<span>Come curare le piante (44)</span>
-					<span>Come curare le piante (44)</span>
-					<span>Come curare le piante (44)</span>
-					<span>Come curare le piante (44)</span>
-					<span>Come curare le piante (44)</span>
-				</div>
-				<div>
-					<div style="background-image: url(img/img1.png);"><p>Come scegliere un tosaerba a scoppio: tutti i modelli</p></div>
-					<div style="background-image: url(img/img2.png);"><p>Come scegliere un tosaerba a scoppio: tutti i modelli</p></div>
-					<div style="background-image: url(img/img3.png);"><p>Come scegliere un tosaerba a scoppio: tutti i modelli</p></div>
-					<div style="background-image: url(img/img4.png);"><p>Come scegliere un tosaerba a scoppio: tutti i modelli</p></div>
-					<div style="background-image: url(img/img5.png);"><p>Come scegliere un tosaerba a scoppio: tutti i modelli</p></div>
-				</div>
+				<span>HOME</span>
+				<span>HOME</span>
+				<span>HOME</span>
+				<span>HOME</span>
+				<span>HOME</span>
+				<span>HOME</span>
+				<span>HOME</span>
+				<span>HOME</span>
+				<span>HOME</span>
+				<span>HOME</span>
 			</div>
-		</div>
+		</nav>
+		<div>
+			<div>
+				<label><b>Argomenti</b></label>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+				<span>Come curare le piante (39)</span>
+			</div>
+			<div>
+				<span>
+					<p>Lorem ipsum lorem ipsum</p>
+				</span>
+				<span>
+					<p>Lorem ipsum</p>
+				</span>
+				<span>
+					<p>Lorem ipsum</p>
+				</span>
+				<span>
+					<p>Lorem ipsum</p>
+				</span>
+				<span>
+					<p>Lorem ipsum</p>
+				</span>
+			</div>
+		</div>	
 	</body>
 </html>
