completato Esame 28/05/2024 turno 2

--- a/Esami/Esame_2024_05_28/turno_2/Esercizio1.html
+++ b/Esami/Esame_2024_05_28/turno_2/Esercizio1.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="Esercizio1.css">
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="Esercizio1	.css">
 		<script src="Esercizio1.js"></script>
 	</head>
 	<body>
-		<nav>
-			<span>Acquista i prodotti</span>
-			<span>Acquista i prodotti</span>
-			<span>Acquista i prodotti</span>
-			<span>Acquista i prodotti</span>
-			<span>Acquista i prodotti</span>
-			<span>Acquista i prodotti</span>
-		</nav>
 		<div>
+			<nav>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+				<span>Home</span>
+			</nav>
 			<div>
-				<span onclick="changeImage(1)"><img src="img/1.png"></span>
-				<span onclick="changeImage(2)"><img src="img/1.png"></span>
-				<span onclick="changeImage(3)"><img src="img/1.png"></span>
-				<span onclick="changeImage(4)"><img src="img/1.png"></span>
-				<span onclick="changeImage(5)"><img src="img/1.png"></span>
-				<span onclick="changeImage(6)"><img src="img/1.png"></span>
-			</div>
-			<div>
-				<img src="img/1.png">
-			</div>
-			<div>
-				<span>Novità</span>
-				<span>ONNESTAD</span>
-				<span>Lorem ipsum</span>
-				<span>$<span>99</span></span>
-				<span>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+				<div>
+					<span onclick="changeImage(1)"><img src="img/1.png"></span>
+					<span onclick="changeImage(1)"><img src="img/1.png"></span>
+					<span onclick="changeImage(1)"><img src="img/1.png"></span>
+					<span onclick="changeImage(1)"><img src="img/1.png"></span>
+					<span onclick="changeImage(1)"><img src="img/1.png"></span>
+				</div>
+				<div>
+					<img src="img/1.png">
+				</div>
+				<div>
+					<p>
+						<span>Lorem ipsum</span>
+						<span>Lorem ipsum</span>
+						<span>$<span>99</span></span>
+						<span>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+					</p>
+				</div>
 			</div>
 		</div>
 	</body>
