--- a/Esami/Esame_2024_06_18/Esercizio2.html
+++ b/Esami/Esame_2024_06_18/Esercizio2.html
@@ -6,17 +6,17 @@
 	</head>
 	<body>
 		<div>
-			<p></p>
+			<span></span>
 			<div>
-				<p></p>
-				<p></p>
+				<span></span>
+				<span></span>
 			</div>
-			<p></p>
+			<span></span>
 			<div>
-				<p></p>
-				<p></p>
-				<p></p>
+				<span></span>
+				<span></span>
+				<span></span>
 			</div>
 		</div>
 	</body>
-<html>
+</html>
