--- a/Esami/Esame_2024_06_18/Esercizio3.html
+++ b/Esami/Esame_2024_06_18/Esercizio3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<style>
 			body {
 				width: 100vw;
@@ -10,85 +11,90 @@
 			}
 			
 			body>div {
-				width: 75%;
-				border: 2px solid lightgrey;
-				margin: auto;
-				margin-top: 1rem;
+				width: 100%;
 			}
 			
 			body>div>div:nth-of-type(1) {
 				display: flex;
 				flex-direction: column;
-				width: 35%;
-				padding: 1rem;
-				gap: 0.25rem;
+				width: 25%;
+				padding: 2rem;
 				margin: auto;
-				margin-top: 1rem;
-				margin-bottom: 1rem;
+				gap: 1rem;
 				border: 2px solid lightgrey;
 			}
 			
 			body>div>div:nth-of-type(1)>input {
-				width: 80%;
-				padding: 0.5rem;
-				margin: auto;
-				font-size: 14pt;
+				display: flex;
+				padding: 1rem;
+				gap: 1rem;
 			}
 			
-			body>div>div:nth-of-type(1)>button {
-				width: 40%;
-				padding: 0.5rem;
+			body>div>div:nth-of-type(1)>div {
+				width: 100%;
+			}
+			
+			body>div>div:nth-of-type(1)>div>button {
+				width: 49%;
+				height: 50px;
 				margin: auto;
+				border: none !important;
 				font-size: 14pt;
-				border: none;
-				border-radius: 5px;
-				background-color: lightgrey;
+				font-weight: bold;
+				color: white;
+				background-color: crimson;
+			}
+			
+			body>div>div:nth-of-type(1)>div>button:hover {
+				color: black;
+				background-color: grey;
 			}
 			
 			body>div>div:nth-of-type(2) {
 				display: flex;
 				flex-direction: column;
-				justify-content: left; 
-				align-items: center;
-				width: 80%;
-				padding: 1rem;
-				gap: 1rem;
+				width: 25%;
 				margin: auto;
-				margin-bottom: 1rem;
-				border: 2px solid lightgrey;
+				margin-top: 1rem;
+				gap: 1rem;
 			}
 			
 			body>div>div:nth-of-type(2)>span {
-				position: relative;
 				display: flex;
 				flex-direction: column;
-				width: 50%;
-				height: 250px;
-				padding: 1rem;
-				gap: 1.5rem;
-				background-color: orange;
+				position: relative;
+				width: 100%;
+				height: 15rem;
+				border: 2px solid lightgrey;
 			}
 			
-			body>div>div:nth-of-type(2)>span>span:nth-of-type(1) {
-				font-weight: bold;
-				font-size: 14pt;
+			body>div>div:nth-of-type(2)>span>span {
+				margin-top: 1rem;
+				margin-left: 1rem;
 			}
 			
 			body>div>div:nth-of-type(2)>span>span:nth-of-type(2) {
-				height: 125px;
+				width: 80%;
+				height: 50%;
 				overflow-y: scroll;
 			}
 			
 			body>div>div:nth-of-type(2)>span>button {
 				position: absolute;
-				bottom: 10px;
-				right: 10px;
-				padding: 0.5rem;
-				margin: auto;
+				width: 15%;
+				height: 25px;
+				bottom: 2rem;
+				right: 2rem;
+				border: none !important;
 				font-size: 12pt;
-				border: none;
-				border-radius: 5px;
-				background-color: lightgrey;
+				font-weight: bold;
+				color: white;
+				background-color: crimson;
+			}
+			
+			body>div>div:nth-of-type(2)>span>button:hover {
+				color: black;
+				background-color: grey;
 			}
 		</style>
 		<script src="Esercizio3.js"></script>
@@ -98,7 +104,10 @@
 			<div>
 				<input type="text" id="input-titolo" placeholder="Titolo della nota">
 				<input type="text" id="input-contenuto" placeholder="Contenuto della nota">
-				<button id="button-salva">Salva</button>
+				<div>				
+					<button id="button-salva">Salva</button>
+					<button id="button-reload">Reload</button>			
+				</div>
 			</div>
 			<div id="div-notes">
 				
