completata Simulazione Lecture 6

--- a/Esercizi_Lecture/Esercizi_Lect6/Esercizio1.html
+++ b/Esercizi_Lecture/Esercizi_Lect6/Esercizio1.html
@@ -1,76 +1,80 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="Esercizio1.css">
-    </head>
-    <body>
-        <div>
-            <div>
-                <h2>Come prendersi cura di un coniglio nano</h2>
-                <p>I conigli nano sono animali unici. E in quanto tali hanno bisogno di cura, amore, e pazienza. Vogliono che le persone spendono del tempo con loro giocando e prendendosene cura.</p>
-                <p>Ecco qui per te una panoramica su come prenderti cura del tuo coniglio nano. Per maggiori informazioni puoi andare alla <a href="">loro pagina Wikipedia</a>.</p>
-                <table>
-                    <thead>
-                        <tr>
-                            <td>Vegetale</td>
-                            <td>Per il coniglio...</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Radicchio</td>
-                            <td>Va bene</td>
-                        </tr>
-                        <tr>
-                            <td>Radicchio</td>
-                            <td>Va bene</td>
-                        </tr>
-                        <tr>
-                            <td>Radicchio</td>
-                            <td>Va bene</td>
-                        </tr>
-                        <tr>
-                            <td>Radicchio</td>
-                            <td>Va bene</td>
-                        </tr>
-                        <tr>
-                            <td>Radicchio</td>
-                            <td>Va bene</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <p>Se hai domande contattaci!</p>
-                <div>
-                    <label>La tua mail</label>
-                    <input type="text">
-                    <label>Il tuo messaggio</label>
-                    <textarea></textarea>
-                    <label>Tipo domanda</label>
-                    <select>
-                        <option>Alimentazione</option>
-                    </select>
-                </div>
-                <button type="submit">Invia</button>
-            </div>
-            <div>
-                <h2>Altri consigli</h2>
-                <div>
-                    <p>
-                        <span>Prendersi cura di un cane</span>
-                        <span>September 1st, 2022</span>
-                        <span>I cani sono animali...</span>
-                        <span><a href="">Read more</a></span>
-                    </p>
-                    <p>
-                        <span>Prendersi cura di un cane</span>
-                        <span>September 1st, 2022</span>
-                        <span>I cani sono animali...</span>
-                        <span><a href="">Read more</a></span>
-                    </p>
-                    <img src="http://diiorio.nws.cs.unibo.it/twe/07.06.2022b/bunny.jpg" alt="coniglio.jpg">
-                </div>
-            </div>
-        </div>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="Esercizio1.css">
+	</head>
+	<body>
+		<div>
+			<div>
+				<h1>Come prendersi cura di un coniglio nano</h1>
+				<p>
+					I conigli sono animali unici. E in quanto tali hanno bisogno di cura, amore e pazienza. Vogliono che le persone spendano del tempo con loro per giocare e prendersene cura
+				</p>
+				<p>
+					Ecco qui per te la panoramica su come prenderti cura del tuo coniglio nano. Per maggiori informazioni puoi andare alla <a href="..">loro pagina Wikipedia</a>
+				</p>
+				<table>
+					<thead>
+						<tr>
+							<th>Vegetale</th>
+							<th>Per il coniglio...</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Radicchio</td>
+							<td>Va bene</td>
+						</tr>
+						<tr>
+							<td>Radicchio</td>
+							<td>Va bene</td>
+						</tr>
+						<tr>
+							<td>Radicchio</td>
+							<td>Va bene</td>
+						</tr>
+						<tr>
+							<td>Radicchio</td>
+							<td>Va bene</td>
+						</tr>
+						<tr>
+							<td>Radicchio</td>
+							<td>Va bene</td>
+						</tr>
+					</tbody>
+				</table>
+				<p>Se hai domande contattaci!</p>
+				<div>
+					<label>La tua mail</label>
+					<input type="text">
+					<label>Il tuo messaggio</label>
+					<textarea></textarea>
+					<label>Tipo di domanda</label>
+					<select></select>
+				</div>
+				<div>
+					<button>Invia</button>
+				</div>
+			</div>
+			<div>
+				<h1>Altri suggerimenti</h1>
+				<p>
+					<span>Prendersi cura di un cane</span>
+					<span>September 1st, 2022</span>
+					<span>I cani sono animali molto...</span>
+					<a href="..">Read more</a>
+				</p>
+				<p>
+					<span>Prendersi cura di un cane</span>
+					<span>September 1st, 2022</span>
+					<span>I cani sono animali molto...</span>
+					<a href="..">Read more</a>
+				</p>
+				<p>
+					<img src="">
+				</p>
+			</div>
+		</div>
+	</body>
 </html>
