completato Esame 28/05/2024 turno 1

--- a/Esami/Esame_2024_05_28/turno_1/Esercizio1.html
+++ b/Esami/Esame_2024_05_28/turno_1/Esercizio1.html
@@ -2,70 +2,85 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="Esercizio1.css"> 
+		<link rel="stylesheet" type="text/css" href="Esercizio1.css">
 	</head>
 	<body>
 		<div>
-			<nav>	
-				<img src="img/logo.png" alt="Logo della pagina">
+			<nav>
+				<img src="img/logo.png">
 				<div>
-					<span>Movies</span>
-					<span>Movies</span>
-					<span>Movies</span>
-					<span>Movies</span>
-					<span>Movies</span>
+					<span>MOVIES</span>
+					<span>TV SHOWS</span>
+					<span>SHOP</span>
+					<span>NEWS</span>
+					<span>SHOWTIMES</span>
 				</div>
 			</nav>
 			<div>
-				<span>
-					<span><i>MAD MAX</i> MOVIES IN ORDER</span>
-					<img src="img/1.png">
-				</span>
-				<span>
-					<span><i>MAD MAX</i> MOVIES IN ORDER</span>
-					<img src="img/2.png">
-				</span>
-				<span>
-					<span><i>MAD MAX</i> MOVIES IN ORDER</span>
-					<img src="img/2.png">
-				</span>
+				<span><span><i>MAD MAX</i> MOVIES IN ORDER</span></span>
+				<span><span><i>MAD MAX</i> IN ORDER</span></span>
+				<span><span><i>MAD MAX</i> IN ORDER</span></span>
 			</div>
+			<span>
+				<span>NEW & UPCOMING MOVIES IN THEATERS</span>
+				<span>VIEW ALL</span>
+			</span>
 			<div>
 				<span>
 					<img src="img/2.png">
-					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+					<p>
+						<span>99%</span>
+						<span>BAD BOYS</span>
+					</p>
 				</span>
 				<span>
 					<img src="img/2.png">
-					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+					<p>
+						<span>99%</span>
+						<span>BAD BOYS</span>
+					</p>
 				</span>
 				<span>
 					<img src="img/2.png">
-					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+					<p>
+						<span>99%</span>
+						<span>BAD BOYS</span>
+					</p>
 				</span>
 				<span>
 					<img src="img/2.png">
-					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+					<p>
+						<span>99%</span>
+						<span>BAD BOYS</span>
+					</p>
 				</span>
 				<span>
 					<img src="img/2.png">
-					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+					<p>
+						<span>99%</span>
+						<span>BAD BOYS</span>
+					</p>
 				</span>
 				<span>
 					<img src="img/2.png">
-					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+					<p>
+						<span>99%</span>
+						<span>BAD BOYS</span>
+					</p>
 				</span>
 				<span>
 					<img src="img/2.png">
-					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+					<p>
+						<span>99%</span>
+						<span>BAD BOYS</span>
+					</p>
 				</span>
 				<span>
 					<img src="img/2.png">
-					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
-				</span>
-				<span>
-					<img src="img/2.png">
-					<span><a href="..">Furiosa a MAD MAX Saga</a></span>
+					<p>
+						<span>99%</span>
+						<span>BAD BOYS</span>
+					</p>
 				</span>
 			</div>
 		</div>
