--- a/Esami/Esame_2024_05_28/turno_1/Esercizio2.html
+++ b/Esami/Esame_2024_05_28/turno_1/Esercizio2.html
@@ -5,70 +5,59 @@
 		<style>
 			body {
 				width: 100vw;
-				margin: 0;
 				padding: 0;
+				margin: 0;
 				font-family: sans-serif;
 			}
 			
 			body>div {
-				width: 20%;
-					margin: auto;
-				padding: 1rem;
-				background-color: rgb(0,0,0,0.75)
-			}
-			
-			body>div>p {
 				display: flex;
 				flex-direction: column;
-				margin: 1rem;
-				gap: 0.5rem;
+				width: 25%;
+				padding: 1rem;
+				margin: auto;
+				background-color: rgb(0,0,0,0.75);
+			}
+			
+			#div-checkbox {
+				display: flex;
+				flex-direction: column;
+				margin-top: 1rem;
+				margin-bottom: 1rem;
+				gap: 0.25rem;
 				color: white;
 			}
 			
-			body>div>p>span>input {
-				margin-right: 1rem;
-			}
-			
-			body>div>div {
+			#div-input {
 				display: flex;
 				flex-direction: column;
-				width: 90%;
-				padding-left: 2rem;
+				width: 80%;
 				gap: 1rem;
 			}
 			
-			input[type="text"] {
-				color: white;
-				padding: 1rem;
-				background-color: black;
-				border: 2px solid lightblue;
-				border-radius: 2px;
-			}
-			
-			#button-aggiungi {
+			button:nth-of-type(1) {
+				padding: 0.5rem;
+				border-radius: 5px;
+				border: none !important;
 				background-color: lightblue;
-				padding: 0.25rem;
-				border: 2px solid lightblue;
-				border-radius: 5px;
 			}
 			
-			#button-elimina {
-				background-color: black;
-				padding: 0.25rem;
-				border: 2px solid white;
+			button:nth-of-type(2) {
+				padding: 0.5rem;
 				border-radius: 5px;
+				border: none !important;
 				color: white;
+				background-color: rgb(0,0,0,0.5);
 			}
 		</style>
-		<script src="Esercizio2.js"></script> 
+		<script src="Esercizio2.js"></script>
 	</head>
 	<body>
 		<div>
-			<p id="p-checkbox">
-				
-			</p>
-			<div>
-				<input type="text" id="input-elemento" placeholder="Aggiungi un elemento">
+			<div id="div-checkbox">
+			</div>
+			<div id="div-input">
+				<input type="text" id="input-text">
 				<div>
 					<button id="button-aggiungi">Aggiungi</button>
 					<button id="button-elimina">Elimina</button>
