--- a/Esami/Esame_2024_05_28/turno_2/Esercizio1.html
+++ b/Esami/Esame_2024_05_28/turno_2/Esercizio1.html
@@ -2,22 +2,23 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="Esercizio1	.css">
+		<link rel="stylesheet" type="text/css" href="Esercizio1.css">
 		<script src="Esercizio1.js"></script>
 	</head>
-	<body>
+	<body>	
 		<div>
 			<nav>
-				<span>Home</span>
-				<span>Home</span>
-				<span>Home</span>
-				<span>Home</span>
-				<span>Home</span>
-				<span>Home</span>
-				<span>Home</span>
+				<span>Acquista i prodotti</span>
+				<span>Esplora gli ambienti</span>
+				<span>Offerte</span>
+				<span>Ispirazione</span>
+				<span>IKEA for Business</span>
+				<span>Progettazione e Servizi</span>
+				<span>Altro</span>
 			</nav>
 			<div>
 				<div>
+					<span onclick="changeImage(1)"><img src="img/1.png"></span>
 					<span onclick="changeImage(1)"><img src="img/1.png"></span>
 					<span onclick="changeImage(1)"><img src="img/1.png"></span>
 					<span onclick="changeImage(1)"><img src="img/1.png"></span>
@@ -29,12 +30,14 @@
 				</div>
 				<div>
 					<p>
-						<span>Lorem ipsum</span>
-						<span>Lorem ipsum</span>
+						<span>Novit&agrave</span>
+						<span>ONNESTAD</span>
+						<span>Poltrona, Radbyn bianco/verde</span>
 						<span>$<span>99</span></span>
 						<span>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
 					</p>
 				</div>
+				
 			</div>
 		</div>
 	</body>
